Actualización de README.md y mejora de la documentación del paquete

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: rive_color_modifier
 description: "An easy and straightforward way to modify the Color of specific
   Components within Rive Animations at runtime, while also maintaining their
   opacity throughout the animation."
-version: 1.0.3
+version: 1.0.4
 homepage: https://jsimon.dev
 repository: https://github.com/JSimonDev/rive_color_modifier
 issue_tracker: https://github.com/JSimonDev/rive_color_modifier/issues
@@ -20,3 +20,7 @@ dev_dependencies:
   flutter_lints: ^3.0.1
   flutter_test:
     sdk: flutter
+
+screenshots:
+  - description: 'Rive_color_modifier_preview'
+    path: screenshots/rive_color_modifier_poster.png
