--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,7 +14,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  rive: ">=0.13.1"
+  rive: "^0.13.1"
 
 dev_dependencies:
   flutter_lints: ^3.0.1
