--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,7 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  rive: ^0.13.7
+  rive: ^0.13.9
   rive_color_modifier:
     path: ../
   animated_theme_switcher: ^2.0.10
@@ -64,7 +64,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/
+    - assets/rive/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -77,17 +78,20 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
+  fonts:
+    - family: AirbnbCereal
+      fonts:
+        - asset: fonts/AirbnbCereal_W_Bd.otf
+          weight: 700
+        - asset: fonts/AirbnbCereal_W_Bk.otf
+          weight: 400
+        - asset: fonts/AirbnbCereal_W_Blk.otf
+          weight: 900
+        - asset: fonts/AirbnbCereal_W_Lt.otf
+          weight: 300
+        - asset: fonts/AirbnbCereal_W_Md.otf
+          weight: 500
+        - asset: fonts/AirbnbCereal_W_XBd.otf
+          weight: 800
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
