--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: rive_color_modifier
 description: "An easy and straightforward way to modify the Color of specific
   Components within Rive Animations at runtime, while also maintaining their
   opacity throughout the animation."
-version: 2.1.2
+version: 2.1.3
 homepage: https://jsimon.dev
 repository: https://github.com/JSimonDev/rive_color_modifier
 issue_tracker: https://github.com/JSimonDev/rive_color_modifier/issues
@@ -14,7 +14,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  rive: "^0.13.20"
+  rive: ^0.13.20
 
 dev_dependencies:
   flutter_lints: ^5.0.0
